--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </head>
 <body>
     <div class="container">
-        <div id="red" class="light"></div>
-        <div id="yellow" class="light"></div>
-        <div id="green" class="light"></div>
+        <div id="red" class="light">Stop to ride...</div>
+        <div id="yellow" class="light">Waiting for a ride...</div>
+        <div id="green" class="light">Go to ride....</div>
         <button onclick="startSequence()">Start</button>
     </div>
 
