--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             margin: 10px auto;
             background-color: gray;
         }
+        .title{
+            padding: 5px;
+            font-size: 12px;
+            margin-top: 20px;
+        }
         .container {
             text-align: center;
         }
@@ -24,9 +29,9 @@
 </head>
 <body>
     <div class="container">
-        <div id="red" class="light"><h2>Stop to ride...</h2></div>
-        <div id="yellow" class="light"><h2>Waiting for a ride...</h2></div>
-        <div id="green" class="light"><h2>Go to ride....</h2></div>
+        <div id="red" class="light"><h2 class="title">Stop to ride...</h2></div>
+        <div id="yellow" class="light"><h2 class="title">Waiting for a ride...</h2></div>
+        <div id="green" class="light"><h2 class="title">Go to ride....</h2></div>
         <button onclick="startSequence()">Start</button>
     </div>
 
