--- a/index.html
+++ b/index.html
@@ -10,28 +10,35 @@
             height: 100px;
             border-radius: 50%;
             margin: 10px auto;
-            background-color: gray;
+            background-color:burlywood;
         }
         .title{
-            padding: 50px;
-            font-size: 16px;
-            margin-top: 50px;
+            padding: 26px;
+            font-size: 24px;
+            margin-top: 25px;
+            color:snow;
         }
         .container {
             text-align: center;
         }
+        h1{
+            text-align: center;
+            color: cornflowerblue;
+        }
         button {
-            padding: 10px;
+            padding: 8px;
             font-size: 16px;
-            margin-top: 20px;
+            margin-top: 18px;
+            border-radius: 25px;
         }
     </style>
 </head>
 <body>
+    <h1>Traffic Light Signal</h1>
     <div class="container">
-        <div id="red" class="light"><h2 class="title">Stop to ride...</h2></div>
-        <div id="yellow" class="light"><h2 class="title">Waiting for a ride...</h2></div>
-        <div id="green" class="light"><h2 class="title">Go to ride....</h2></div>
+        <div id="red" class="light"><h2 class="title">Stop</h2></div>
+        <div id="yellow" class="light"><h2 class="title">Wait</h2></div>
+        <div id="green" class="light"><h2 class="title">Go</h2></div>
         <button onclick="startSequence()">Start</button>
     </div>
 
@@ -43,18 +50,18 @@
             setTimeout(() => {
                 resetLights();
                 document.getElementById('yellow').style.backgroundColor = 'yellow';
-            }, 5000);
+            }, 50);
             
             setTimeout(() => {
                 resetLights();
                 document.getElementById('green').style.backgroundColor = 'green';
-            }, 10000);
+            }, 100);
         }
 
         function resetLights() {
-            document.getElementById('red').style.backgroundColor = 'gray';
-            document.getElementById('yellow').style.backgroundColor = 'gray';
-            document.getElementById('green').style.backgroundColor = 'gray';
+            document.getElementById('red').style.backgroundColor = 'black';
+            document.getElementById('yellow').style.backgroundColor = 'black';
+            document.getElementById('green').style.backgroundColor = 'black';
         }
     </script>
 </body>
